--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -106,16 +106,16 @@ button.pushbutton {
 
 .toolbox_main { position: relative; }
 .toolbox_main > .toolset_connection { right:0px; top:0px; }
-.toolbox_main > .toolset_hexdump_controller { right:120px; top:0px; }
+.toolbox_main > .toolset_memutils_controller { right:120px; top:0px; }
 .toolbox_main > .toolset_actor_inspector:nth-of-type(1) { left: 0px; top:   0px; }
 .toolbox_main > .toolset_actor_inspector:nth-of-type(2) { left: 0px; top: 400px; }
 .toolbox_main > .toolset_actor_inspector:nth-of-type(3) { left: 0px; top: 800px; }
 .toolbox_main > .toolset_actor_inspector:nth-of-type(4) { left: 0px; top:1200px; }
 
 
-.toolset_hexdump_controller {
+.toolset_memutils_controller {
     position: absolute;
-    height: 200px;
+    height: 230px;
     padding: 8px;
     border: 1px solid #444;
 
@@ -123,9 +123,11 @@ button.pushbutton {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr;
     grid-template-areas:
-    'slots';
+    'hexdump'
+    'memsearch';
 }
-.toolset_hexdump_controller > .slots { grid-area: slots; }
+.toolset_memutils_controller > .hexdump { grid-area: hexdump; }
+.toolset_memutils_controller > .memsearch { grid-area: memsearch; }
 
 
 .toolset_connection {
