--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -113,7 +113,7 @@ textarea {
 
 .toolbox_main { position: relative; }
 .toolbox_main > .toolset_connection { right:0px; top:0px; }
-.toolbox_main > .toolset_memutils_controller { right:120px; top:0px; }
+.toolbox_main > .toolset_memutils_controller { right:0px; top:64px; }
 .toolbox_main > .toolset_actor_inspector:nth-of-type(1) { left: 0px; top:   0px; }
 .toolbox_main > .toolset_actor_inspector:nth-of-type(2) { left: 0px; top: 400px; }
 .toolbox_main > .toolset_actor_inspector:nth-of-type(3) { left: 0px; top: 800px; }
@@ -142,19 +142,17 @@ textarea {
 
 .toolset_connection {
     position: absolute;
-    height: 56px;
+    height: 32px;
     padding: 8px;
     border: 1px solid #444;
 
     display: inline-grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-template-columns: 1fr;
     grid-template-areas:
     'ws'
-    'backend';
 }
 .toolset_connection > .ws { grid-area: ws; }
-.toolset_connection > .backend { grid-area: backend; }
 
 
 .toolset_actor_inspector {
